Correcao docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - 80:80
     volumes:
-      - ./html:/var/www/html
+      - PASTA_ROOT_APLICACAO:/var/www/html
     restart: on-failure
     links:
       - db
